# vibetrading

./: .env.dev_example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  secret-scan.yml
docs/: api-reference.md  configuration.md  getting-started.md  live-trading.md
examples/: 01_backtest_sma_crossover.py  02_validate_strategy.py  03_download_and_load.py  04_prompt_template_with_llm.py  05_generate_and_backtest.py  06_analyze_backtest.py  07_envole_strategy.py  08_templates_quickstart.py  09_cli_workflow.sh  10_live_trading.py
scripts/: dogfood_binance_sweep.py
strategies/: README.md  breakout_consolidation.py  funding_rate_arb.py  macd_trend_follower.py  multi_asset_momentum.py  rsi_mean_reversion.py  spot_dca_rebalance.py
tests/: test_backtest_engine.py  test_cli.py  test_compare.py  test_decorator.py  test_edge_cases.py  test_error_handler.py  test_exchange_aster_and_dedup.py  test_exchange_factory.py  test_exchange_hyperliquid.py  test_indicators.py  test_metrics.py  test_models.py  test_prompt.py  test_sandbox.py  test_sizing.py  test_slippage.py  test_strategies.py  test_templates.py  test_validator.py
vibetrading/: __init__.py  _config.py  backtest.py  cli.py  compare.py  evolution.py  indicators.py  live.py  models.py  sandbox.py  sizing.py  strategy.py  tools.py
vibetrading/_agent/: analyzer.py  generator.py  prompt.py  validator.py
vibetrading/_core/: backtest.py  decorator.py  error_handler.py  live_runner.py  sandbox_base.py  static_sandbox.py
vibetrading/_exchanges/: __init__.py  aster.py  base.py  extended.py  hyperliquid.py  lighter.py  paradex.py
vibetrading/_metrics/: calculator.py
vibetrading/_models/: orders.py  types.py
vibetrading/_tools/: data_downloader.py  data_loader.py
vibetrading/_utils/: cache.py  indicators.py  json.py  logging.py  math.py  notification.py  sizing.py
vibetrading/agent/: __init__.py  generator.py
vibetrading/core/: __init__.py  backtest.py  error_handler.py  live_runner.py  static_sandbox.py
vibetrading/exchanges/: __init__.py  aster.py  base.py  extended.py  hyperliquid.py  lighter.py  paradex.py
vibetrading/metrics/: __init__.py  calculator.py
vibetrading/models/: __init__.py  orders.py
vibetrading/templates/: __init__.py  dca.py  grid.py  mean_reversion.py  momentum.py  multi_momentum.py
vibetrading/tools/: __init__.py  data_downloader.py  data_loader.py
vibetrading/utils/: __init__.py  json.py  logging.py  math.py  notification.py
